--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -18,8 +18,10 @@
     <link rel="stylesheet" href="/static/admin-lte/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 </head>
 
@@ -37,12 +39,12 @@
                     <input type="text" id="dateRange" name="dateRange" value="" />
                     <div class="input-group-prepend">
                         <span class="input-group-text">
-                        <i class="far fa-calendar-alt"></i>
+                            <i class="far fa-calendar-alt"></i>
                         </span>
-                        </div>
+                    </div>
                     <!-- /.card-header -->
                     <div class="card-body">
-
+                        <input type="text" name="daterange" value="01/01/2018 - 01/15/2018" />
                         <label>Search:<input type="search" class="form-control form-control-sm" placeholder=""
                                 aria-controls="example1" id="myInput"></label>
                         <button class="btn btn-success" type="submit" id="applyFilterButton">actualizar</button>
@@ -86,6 +88,13 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
+        $(function () {
+            $('input[name="daterange"]').daterangepicker({
+                opens: 'left'
+            }, function (start, end, label) {
+                console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
+            });
+        }); 
 
         $(document).ready(function () {
             $.ajax({
