--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -15,10 +15,10 @@
 </head>
 <body>
   <div>
-    <label for="datepicker-start">Desde:</label>
-    <input type="text" id="datepicker-start">
-    <label for="datepicker-end">Hasta:</label>
-    <input type="text" id="datepicker-end">
+    <label for="datepicker-start" >Desde:</label>
+    <input type="text" id="datepicker-start" placeholder="yyyy-mm-dd">
+    <label for="datepicker-end"  >Hasta:</label>
+    <input type="text" id="datepicker-end"placeholder="yyyy-mm-dd">
     <button id="filter-btn">Filtrar</button>
   </div>
 
